# file-comparison-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_UPLOAD_READY.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
build-tools/: FileComparisonTool.spec  build_and_package.py  build_executable.py  create_installer.py
docs/: BUILD_AND_DEPLOY.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  help_system_documentation.md  user_guide.md
docs/development/: task7_completion_summary.md  version_info.txt
docs/fixes/: README.md  column_mapping_callback_fix_summary.md  export_dialog_parameter_fix_summary.md
docs/images/: README.md
scripts/: create_performance_test_files.py  create_test_files.py  diagnose_tkinter.py  diagnostic_panel_display.py  diagnostic_summary_report.py  fix_panel_display.py  main_debug.py  main_fixed.py  main_minimal.py  run_comprehensive_tests.py  run_initialization_tests.py  simple_file_tool.py  test_column_mapping_callback_fix.py  test_export_dialog_fix.py  verify_project_structure.py
src/: __init__.py
src/controllers/: __init__.py  main_controller.py
src/gui/: __init__.py  column_mapping_panel.py  error_dialogs.py  file_selection_panel.py  main_window.py  operation_config_panel.py  progress_dialog.py  results_panel.py
src/models/: __init__.py  data_models.py  exceptions.py  interfaces.py
src/services/: __init__.py  comparison_engine.py  error_handler.py  export_service.py  file_parser_service.py  help_service.py  performance_optimizer.py
test_data/: comparison-results-find-unique-values-20250823_234542.csv  comparison-results-find-unique-values-20250823_234830.xlsx  comparison-results-find-unique-values-20250823_235429.csv  customers.csv  customers.xlsx  employees_large.csv
